--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,8 @@ winit = { version = "0.22.0", optional = true }
 drm = { version = "^0.4.0", git = "https://github.com/drakulix/drm-rs", branch = "develop", optional = true }
 gbm = { version = "^0.6.0", git = "https://github.com/drakulix/gbm.rs", branch = "develop", optional = true, default-features = false, features = ["drm-support"] }
 glium = { version = "0.23.0", optional = true, default-features = false }
-input = { version = "0.4.1", optional = true }
-udev = { version = "0.2.0", optional = true }
+input = { version = "0.5", default-features = false, optional = true }
+udev = { version = "0.4", optional = true }
 dbus = { version = "0.8", optional = true }
 systemd = { version = "0.4.0", optional = true }
 wayland-protocols = { version = "0.25.0", features = ["unstable_protocols", "server"], optional = true }
