--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,8 @@ winit = { version = "0.22.0", optional = true }
 drm = { version = "^0.4.0", git = "https://github.com/drakulix/drm-rs", branch = "develop", optional = true }
 gbm = { version = "^0.6.0", git = "https://github.com/drakulix/gbm.rs", branch = "develop", optional = true, default-features = false, features = ["drm-support"] }
 glium = { version = "0.23.0", optional = true, default-features = false }
-input = { version = "0.4.1", optional = true }
-udev = { version = "0.2.0", optional = true }
+input = { version = "0.5", default-features = false, optional = true }
+udev = { version = "0.4", optional = true }
 dbus = { version = "0.8", optional = true }
 systemd = { version = "0.4.0", optional = true }
 wayland-protocols = { version = "0.25.0", features = ["unstable_protocols", "server"], optional = true }
@@ -37,7 +37,7 @@ image = { version = "0.21.0", optional = true }
 lazy_static = "1.0.0"
 thiserror = "1"
 # TODO: remove as soon as drm-rs provides an error implementing Error
-failure = "0.1"
+failure = { version = "0.1", optional = true }
 
 [dev-dependencies]
 slog-term = "2.3"
@@ -47,8 +47,8 @@ gl_generator = { version = "0.10", optional = true }
 
 [features]
 default = ["backend_winit", "backend_drm_legacy", "backend_drm_gbm", "backend_drm_egl", "backend_libinput", "backend_udev", "backend_session_logind", "renderer_glium", "xwayland", "wayland_frontend"]
-backend_winit = ["winit", "wayland-server/dlopen", "wayland-client/dlopen", "wayland-egl", "backend_egl", "renderer_gl", "use_system_lib"]
-backend_drm = ["drm"]
+backend_winit = ["winit", "wayland-server/dlopen", "wayland-client/dlopen", "backend_egl", "wayland-egl", "renderer_gl", "use_system_lib"]
+backend_drm = ["drm", "failure"]
 backend_drm_legacy = ["backend_drm"]
 backend_drm_gbm = ["backend_drm", "gbm", "image"]
 backend_drm_egl = ["backend_drm", "backend_egl"]
