--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,8 @@ tempfile = "3.0"
 slog = "2.1.1"
 slog-stdlog = "3.0.2"
 libloading = "0.5.0"
-wayland-client = { version = "0.23.4", features = ["egl"], optional = true }
+wayland-client = { version = "0.23.4", optional = true }
+wayland-egl = { version = "0.25.0", optional = true }
 winit = { version = "0.22.0", optional = true }
 drm = { version = "^0.4.0", git = "https://github.com/drakulix/drm-rs", branch = "develop", optional = true }
 gbm = { version = "^0.6.0", git = "https://github.com/drakulix/gbm.rs", branch = "develop", optional = true, default-features = false, features = ["drm-support"] }
@@ -50,7 +51,7 @@ backend_drm = ["drm", "failure"]
 backend_drm_legacy = ["backend_drm"]
 backend_drm_gbm = ["backend_drm", "gbm", "image"]
 backend_drm_egl = ["backend_drm", "backend_egl"]
-backend_egl = ["gl_generator"]
+backend_egl = ["gl_generator", "wayland-egl"]
 backend_libinput = ["input"]
 backend_session = []
 backend_udev = ["udev"]
