--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,9 +34,10 @@ dbus = { version = "0.8", optional = true }
 systemd = { version = "0.4.0", optional = true }
 wayland-protocols = { version = "0.25.0", features = ["unstable_protocols", "server"], optional = true }
 image = { version = "0.21.0", optional = true }
-error-chain = "0.12.0"
 lazy_static = "1.0.0"
-failure = { version = "0.1.5", optional = true }
+thiserror = "1"
+# TODO: remove as soon as drm-rs provides an error implementing Error
+failure = "0.1"
 
 [dev-dependencies]
 slog-term = "2.3"
@@ -47,7 +48,7 @@ gl_generator = { version = "0.10", optional = true }
 [features]
 default = ["backend_winit", "backend_drm_legacy", "backend_drm_gbm", "backend_drm_egl", "backend_libinput", "backend_udev", "backend_session_logind", "renderer_glium", "xwayland", "wayland_frontend"]
 backend_winit = ["winit", "wayland-server/dlopen", "wayland-client/dlopen", "wayland-egl", "backend_egl", "renderer_gl", "use_system_lib"]
-backend_drm = ["drm", "failure"]
+backend_drm = ["drm"]
 backend_drm_legacy = ["backend_drm"]
 backend_drm_gbm = ["backend_drm", "gbm", "image"]
 backend_drm_egl = ["backend_drm", "backend_egl"]
