--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,6 +26,9 @@ jobs:
           toolchain: stable
           override: true
 
+      - name: System dependencies
+        run: sudo apt-get install libudev-dev libgbm-dev libxkbcommon-dev libegl1-mesa-dev libwayland-dev libinput-dev libsystemd-dev libdbus-1-dev
+
       - name: Build Documentation
         uses: actions-rs/cargo@v1
         with:
