ci: add backend_drm_eglstream to feature matrix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
         - backend_drm
         - backend_drm_legacy
         - backend_drm_gbm
+        - backend_drm_eglstream
         - backend_drm_egl
         - backend_libinput
         - backend_udev
