--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ dbus = { version = "0.8.3", optional = true }
 drm = { version = "^0.4.0", git = "https://github.com/drakulix/drm-rs", branch = "develop", optional = true }
 gbm = { version = "^0.6.0", git = "https://github.com/drakulix/gbm.rs", branch = "thread-safe", optional = true, default-features = false, features = ["drm-support"] }
 glium = { version = "0.27.0", optional = true, default-features = false }
-image = { version = "0.23.0", optional = true }
+image = { version = "0.23.0", optional = true, default-features = false }
 input = { version = "0.5", default-features = false, optional = true }
 lazy_static = "1"
 libc = "0.2.70"
