--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: doc
-          args: --no-deps --features "test_all_features"
+          args: --no-deps --features "test_all_features" -p smithay -p calloop:0.6.2 -p dbus -p drm -p gbm -p image -p input -p nix:0.17.0 -p udev -p slog -p wayland-server -p wayland-commons:0.26.6 -p wayland-protocols:0.26.6 -p winit
 
       - name: Setup index
         run: cp ./doc_index.html ./target/doc/index.html
