--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,11 @@ members = [ "anvil" ]
 [dependencies]
 bitflags = "1"
 calloop = "0.6.2"
+cgmath = "0.18.0"
 dbus = { version = "0.9.0", optional = true }
-drm = { version = "^0.4.0", git = "https://github.com/drakulix/drm-rs", branch = "develop", optional = true }
-gbm = { version = "^0.6.0", git = "https://github.com/drakulix/gbm.rs", branch = "thread-safe", optional = true, default-features = false, features = ["drm-support"] }
-glium = { version = "0.29.0", optional = true, default-features = false }
+drm-fourcc = "^2.0.0"
+drm = { version = "^0.4.0-alpha1", git = "https://github.com/drakulix/drm-rs", branch = "next", optional = true }
+gbm = { version = "^0.6.0", git = "https://github.com/drakulix/gbm.rs", branch = "develop", optional = true, default-features = false, features = ["drm-support"] }
 image = { version = "0.23.0", optional = true, default-features = false }
 input = { version = "0.5", default-features = false, optional = true }
 lazy_static = "1"
@@ -35,8 +36,6 @@ wayland-server = { version = "0.28.3", optional = true }
 wayland-sys = { version = "0.28", optional = true }
 winit = { version = "0.24.0", optional = true }
 xkbcommon = "0.4.0"
-# TODO: remove as soon as drm-rs provides an error implementing Error
-failure = { version = "0.1", optional = true }
 
 [dev-dependencies]
 slog-term = "2.3"
@@ -46,22 +45,17 @@ gl_generator = { version = "0.14", optional = true }
 pkg-config = { version = "0.3.17", optional = true }
 
 [features]
-default = ["backend_winit", "backend_drm_legacy", "backend_drm_atomic", "backend_drm_gbm", "backend_drm_eglstream", "backend_drm_egl", "backend_libinput", "backend_udev", "backend_session_logind", "renderer_glium", "xwayland", "wayland_frontend", "slog-stdlog"]
+default = ["backend_drm", "backend_gbm", "backend_libinput", "backend_udev", "backend_session_logind", "backend_winit", "renderer_gl", "xwayland", "wayland_frontend", "slog-stdlog"]
 backend_winit = ["winit", "wayland-server/dlopen", "backend_egl", "wayland-egl", "renderer_gl", "use_system_lib"]
-backend_drm = ["drm", "failure"]
-backend_drm_atomic = ["backend_drm"]
-backend_drm_legacy = ["backend_drm"]
-backend_drm_gbm = ["backend_drm", "gbm", "image"]
-backend_drm_eglstream = ["backend_drm", "backend_egl"]
-backend_drm_egl = ["backend_drm", "backend_egl"]
+backend_drm = ["drm"]
+backend_gbm = ["gbm"]
 backend_egl = ["gl_generator"]
 backend_libinput = ["input"]
 backend_session = []
 backend_udev = ["udev"]
 backend_session_logind = ["dbus", "backend_session", "pkg-config"]
 backend_session_elogind = ["backend_session_logind"]
-renderer_gl = ["gl_generator"]
-renderer_glium = ["renderer_gl", "glium"]
+renderer_gl = ["gl_generator", "backend_egl"]
 use_system_lib = ["wayland_frontend", "wayland-sys", "wayland-server/use_system_lib"]
 wayland_frontend = ["wayland-server", "wayland-commons", "wayland-protocols", "tempfile"]
 xwayland = ["wayland_frontend"]
@@ -69,4 +63,8 @@ test_all_features = ["default"]
 
 [[example]]
 name = "raw_legacy_drm"
-required-features = ["backend_drm_legacy"]
+required-features = ["backend_drm"]
+
+[[example]]
+name = "raw_atomic_drm"
+required-features = ["backend_drm"]
